<resources>
    <string name="app_name">Dietapp</string>
    <string name="inicio">Inicio</string>
    <string name="siguiente">Siguiente</string>
    <string name="tutorial">Tutorial</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="categorias">CATEGORÍAS</string>
    <string name="deporte">DEPORTE</string>
    <string name="volverMenu">Volver Al Menu</string>
    <string name="volverCatego">Volver A CATEGORÍAS</string>
    <string name="volverCategoD">Volver A CATEGORÍAS DEPORTIVAS</string>
    <string name="pescados">PESCADOS</string>
    <string name="carnes">CARNES</string>
    <string name="verduras">VERDURAS y LEGUMBRES</string>
    <string name="pastas">PASTAS</string>
    <string name="salsas">SALSAS y OTROS</string>
    <string name="fruta">FRUTAS</string>
    <string name="dietapp">DIETAPP</string>
    <string name="reto">Retos</string>
    <string name="deporteex">DEPORTE EXTREMO</string>
    <string name="guardar">GUARDAR DATOS</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="a">a</string>
    <string name="guardar2">Guardar</string>
    <string name="indicarDeprorte">Indica que deporte has practicado</string>
    <string name="animo">Sabemos que ha sido un duro trabajo, pero lo mejor de esta vida cuesta.  ÁNIMO Y SIGUE ASÍ</string>
    <string name="timepodeporte">Indica aqui el tiempo en horas y minutos:</string>
    <string name="imagendepor">imagen</string>
    <string name="imagen2depor">imagen2</string>
    <string name="ayudadepor">El resultado es una aproximación, ya que no es exacto, depende de cada persona. </string>
    <string name="carneblanca">carne blanca</string>
    <string name="embutido">Embutidos</string>
    <string name="carneroja">carne roja:</string>
    <string name="imagencarne">imagencarne</string>
    <string name="cantidadcarne">Indica cantidad de filetes: </string>
    <string name="cantidadcarne2">Indica cantidad de filetes: </string>
    <string name="cantidadembutido">Indica cantidad de embutido:  </string>
    <string name="totalcarne">Ver total calorias consumidas de carne:  </string>
    <string name="ayuda">ayuda</string>
    <string name="fechayhora">fecha y hora actuales</string>
    <string name="horaactual">hora actuales</string>
    <string name="comentariocalendar">Añade comentario a continuación para guardar con los datos si lo deseas: </string>
    <string name="salvarcalendar">salvar datos en calendario</string>
    <string name="imageninicio">imageninicio</string>
    <string name="imagenexpli1">imagen explica 1</string>
    <string name="imagenexpli2">imagen explica 2</string>
    <string name="imagenexpli3">imagen explica 3</string>
    <string name="imagenexpli4">imagen explica 4</string>
    <string name="imagenexpli5">imagen explica 5</string>
    <string name="imagenexpli6">imagen explica 6</string>
    <string name="imagenfru">imagen fruta</string>
    <string name="indicafru">Indica cuantas piezas de fruta has comido.(se puede poner que has comido media pieza:0.5)</string>
    <string name="textbebidas">Indica vasos de bebida has tomado.</string>
    <string name="indicafru2">Indica que fruta has comido</string>
    <string name="indicabebidas2">Indica que bebida has tomado</string>
    <string name="indicapasta">Indica que pasta has comido</string>
    <string name="indicapasta2">Indica cuantos platos de pasta has comido</string>
    <string name="imagenpasta">imagen pasta</string>
    <string name="imagenpasta2">imagen pasta 2</string>
    <string name="pescado1">Ver total calorias consumidas</string>
    <string name="cantidadpescado1">Indica cuantidad:</string>
    <string name="crustaceos">Crustaceos:</string>
    <string name="moluscos">Moluscos:</string>
    <string name="imagenpescado1">imagen pescado 1</string>
    <string name="imagenpescado2">imagen pescado 2</string>
    <string name="imagenpopcarne">imagen popcarne </string>
    <string name="imagenpoppasta">imagen poppasta </string>
    <string name="imagenpoppescado">imagen poppescado </string>
    <string name="imagenpopverdura">imagen verdura </string>
    <string name="imagensalsa">imagen salsa </string>
    <string name="imagendeporte1">imagen deporte 1 </string>
    <string name="imagendeporte2">imagen deporte 2 </string>
    <string name="imagenverdur">imagen verdura </string>
    <string name="vertotal">ver total </string>
    <string name="calendario">calendario </string>
    <string name="textpopcarne">andouille: _____________________232kcal__
        bacon_panceta_tocino: ________407kcal__
        bockwust: ____________________301kcal__
        bratwurst: ____________________297kcal__
        chorizo: ______________________455kcal__
        corned beef: _________________153kcal__
        fuet:__________________________422kcal__
        jamón_cocida: ________________133kcal__
        kielbasa: _____________________309kcal__
        knackwurst:__________________307kcal__
        landjäger/salchicha: __________352kcal__
        leberwurst: ___________________326kcal__
        lomo_embutido: ______________200kcal__
        lyoner: _______________________247kcal__
        mettwurst: ___________________310kcal__
        mortadela: ___________________311kcal__
        pastrami: ____________________133kcal__
        prociutto: ____________________195kcal__
        salami/salame:_______________336kcal__
        salchicha/chorizo: ____________230kcal__
        salchicha/chorizo_picante:______259kcal_
        salchicha/chorizo ahumado:____301kcal_
        salchicha_italiana/chorizo criollo: 149kcal
        salchicha parrillera: ____________840kcal__
        frankfurt/salchicha de viena: ___305kcal_
        salchichón: __________________247kcal__
        sobrasada: __________________598kcal__
        weisswurst/salchicha blanca: __313kcal__ </string>
    <string name="textpoppescado">
         Pescado(nº kcalorias por cada 100gr):
        ___________________________________
        abadejo:__________________111kcal__
         anchoa_de_banco:_________159kcal__
         anguila:_________________236kcal__
        arenque:__________________203kcal__
         atun:____________________132kcal__
        boquerón/anchoa:__________131kcal__
       bacalao:___________________105kcal__
        balistes:_________________93kcal__
        boga:____________________149kcal__
        brema:___________________135kcal__
        bacaladilla/lirio/perlita:_84kcal_
        besugo:___________________88kcal__
        caballa/verdel:__________212kcal__
        capellán:________________124kcal__
        carpa:___________________162kcal__
         caviar:_________________264kcal__
        corvina:__________________81kcal__
        cabracho:_________________91kcal__
        congrio:_________________107kcal__
          dorada:_________________77kcal__
        dorado:___________________85kcal__
       esglefino:_________________90kcal__
        esturión:________________135kcal__
        fletán/halibut:__________111kcal__
        gallineta_nórdica:________94kcal__
        lenguado:_________________86kcal__
        lisa:____________________150kcal__
        lubina/ródalo:___________124kcal__
        lucio:___________________113kcal__
        lucioperca:_______________84kcal__
        maruca:__________________128kcal__
        merluza:_________________71kcal__
        mero/cherna:____________118kcal__
        palitos_de_pescado:_____290kcal__
        palometa/japuta:________187kcal__
        panga:___________________67kcal__
        pargo_rojo:______________87kcal__
        pejerrey:_______________106kcal__
        pescadilla:_____________116kcal__
        peto:___________________109kcal__
        pez_espada_ó_emperador:_172kcal_
        platija:________________86kcal__
        rape:___________________97kcal__
        rodaballo:_____________122kcal__
        sabalote:______________190kcal__
        salmón:________________206kcal__
        sardina:_______________208kcal__
        solla:__________________91kcal__
        surubí:________________110kcal__
        sábalo:________________252kcal__
        tiburón:_______________130kcal__
        trucha:________________190kcal___
        gallo:__________________81kcal__
        jurel/chicharro:________117kcal__
        liba/eglefino/merlán:___84kcal__
        raya:____________________97kcal__
         salmón:________________206kcal__
        salmonete:______________109kcal__
         sushi:_________________150kcal__
        zapatilla:_______________77kcal__

    </string>
    <string name="popuppescado2">
     Marisco(nº kcalorias por cada 100gr):
    ____________________________________
    almeja:____________________148kcal__
    almeja_fina/chirla:_______76.6kcal__
    berberecho:_________________76kcal__
    bígaro:_____________________94kcal__
    boca:_______________________86kcal__
    bogavante:__________________90kcal__
    buey_de_mar:_______________130kcal__
    busano:_____________________79kcal__
    calamar:___________________175kcal__
    camarón:____________________82kcal__
    cangrejo_de_mar:___________124kcal__
    cangrejo_de_rio:____________82kcal__
    cañailla:___________________91kcal__
    caracol:____________________80kcal__
    centollo:__________________127kcal__
    cigalas:____________________69kcal__
    coquina:____________________75kcal__
    gambas:_____________________75kcal__
    langosta:___________________89kcal__
    langostino:_________________75kcal__
    langostinos_tigre:__________90kcal__
      lapa:______________________86kcal__
    mejillón:___________________172kcal__
    navaja:_____________________92.5kcal__
    nécora:______________________125kal__
    ostra:_______________________41kcal__
    pecho:______________________86kcal__
    percebe:_____________________66kcal__
    pota:_______________________120kcal__
    pulpo:______________________164kcal__
    sepia:______________________75.3kcal__
    vieira:_____________________111kcal__


</string>
    <string name="hintnombreCrear">Nombre </string>
    <string name="hintCrearApellido1">Primer Apellido</string>
    <string name="hintCrearApellido2">Segundo Apellido </string>
    <string name="hintCrearNombreUser">Nombre Usuario </string>
    <string name="hintCrearContra">Contraseña </string>
    <string name="hintCrearEmaikl">E-mail </string>
    <string name="hintCrearContra2">Repetir Contraseña </string>
    <string name="textCompletado">Ejercicio Completo </string>
    <string name="textMedioCompletado">Medio Ejercicio </string>
    <string name="imagenAbdo1">imagenAbdo1</string>
    <string name="btSoliConta">Recupar contraseña </string>
    <string name="hintUser"> Usuario </string>
    <string name="bCrearUser">Crear Usuario </string>
    <string name="hintLog">Login </string>
    <string name="imagenajustes">imagenajustes</string>
    <string name="cardio">Cardio</string>
    <string name="abdomina">Abdominales</string>
    <string name="espalda">Espalda</string>
    <string name="pierna">Pierna</string>
    <string name="gluteos">Glúteos</string>
    <string name="pecho">Pecho</string>
    <string name="biceps">Biceps</string>
    <string name="trice">Triceps</string>
    <string name="hombro">Hombro</string>
    <string name="recetas">Recetas</string>
    <string name="bebidas">Bebidas</string>
    <string name="VALORAR">Danos tu opinión</string>
</resources>