<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/categorias"
    tools:context="com.example.Dietapp.Categorias">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="69dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagenajustes"
        android:onClick="irAjustes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toEndOf="@+id/textDietap"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ajustes" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="72dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/imageninicio"
        android:onClick="salir"
        app:layout_constraintEnd_toStartOf="@+id/imageView23"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/textDietap"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salida" />

    <Button
        android:id="@+id/button6"
        android:layout_width="94dp"
        android:layout_height="83dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/boton_seguimiento"
        android:onClick="lanzarSeguimiento"
        android:text="@string/seguimiento"
        app:layout_constraintEnd_toEndOf="@+id/bReeftas"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/bReeftas"
        app:layout_constraintTop_toBottomOf="@+id/bReeftas" />

    <Button
        android:id="@+id/button36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:onClick="irAyuda"
        android:text="@string/ayuda"
        app:layout_constraintEnd_toStartOf="@+id/imageView23"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="80dp"
        android:onClick="iravalorar"
        android:text="@string/VALORAR"
        app:layout_constraintEnd_toEndOf="@+id/button36"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textDietap"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="138dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:background="@color/bCSalsa"
        android:onClick="irASalsas"
        android:text="@string/salsas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button30"
        android:layout_width="158dp"
        android:layout_height="66dp"
        android:layout_marginTop="184dp"
        android:background="@color/fondoLogs"
        android:onClick="irDeporte"
        android:text="@string/deporte"
        app:layout_constraintEnd_toEndOf="@+id/bBebidas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button14" />

    <Button
        android:id="@+id/button15"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@color/bCVerdura"
        android:onClick="irAVerduras"
        android:text="@string/verduras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/bReeftas"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/bCVerdura"
        android:onClick="iraRecetas"
        android:text="@string/recetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/bBebidas"
        android:layout_width="140dp"
        android:layout_height="61dp"
        android:layout_marginTop="33dp"
        android:background="@color/bCVerdura"
        android:onClick="irabebidas"
        android:text="@string/bebidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bReeftas"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button13"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="@color/bCPastas"
        android:onClick="irAPastas"
        android:text="@string/pastas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <TextView
        android:id="@+id/textDietap"
        android:layout_width="207sp"
        android:layout_height="79sp"
        android:layout_marginTop="16dp"
        android:background="@color/ayuda"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/dietapp"
        android:textColor="@color/guuardar"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="138dp"
        android:layout_height="65dp"
        android:layout_marginTop="112dp"
        android:background="@color/bCPesacdo"
        android:onClick="irAPescado"
        android:text="@string/pescados"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <Button
        android:id="@+id/button11"
        android:layout_width="193dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:background="@color/bCCarne"
        android:onClick="irACarne"
        android:text="@string/carnes"
        app:layout_constraintEnd_toEndOf="@+id/textDietap"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textDietap"
        app:layout_constraintStart_toStartOf="@+id/textDietap"
        app:layout_constraintTop_toBottomOf="@+id/textDietap" />

    <Button
        android:id="@+id/button12"
        android:layout_width="203dp"
        android:layout_height="56dp"
        android:layout_marginTop="92dp"
        android:background="@color/bCFruta"
        android:onClick="irAFruta"
        android:text="@string/fruta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button11" />
</android.support.constraint.ConstraintLayout>