<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoLogs">

    <Button
        android:id="@+id/completado"
        android:layout_width="107dp"
        android:layout_height="72dp"
        android:layout_marginStart="124dp"
        android:background="@drawable/bg_boton_inicio"
        android:onClick="completad"
        android:text="@string/textCompletado"
        app:layout_constraintBottom_toBottomOf="@+id/medioej2"
        app:layout_constraintStart_toEndOf="@+id/medioej2"
        app:layout_constraintTop_toTopOf="@+id/medioej2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/medioej2"
        android:layout_width="107dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_boton_inicio"
        android:layout_marginStart="36dp"
        android:onClick="mediocompletad"
        android:text="@string/textMedioCompletado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imagenAbdo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bdominale" />

</android.support.constraint.ConstraintLayout>